[package]
name = "mtrx"
version = "0.1.0"
authors = ["Brendan McGuire <brendan@bren.app>"]
license = "MIT OR Apache-2.0"
description = "Provides type-safe matrix operations using const generics"
homepage = "https://github.com/MayorMonty/mtrx"
repository = "https://github.com/MayorMonty/mtrx"
documentation = "https://docs.rs/mtrx"
readme = "README.md"
keywords = ["matrix", "const-generics"]
categories = ["mathematics"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
